--- a/index.html
+++ b/index.html
@@ -468,7 +468,25 @@
           <div class="count" id="nadiTakLayakCount">0</div>
         </div>
       </div>
-      
+      <!-- BAR PROGRAM (tajuk + tarikh + aksi) -->
+<div id="nadiProgramBar" class="d-flex flex-wrap gap-2 align-items-end mb-2">
+  <div class="flex-grow-1">
+    <label class="form-label mb-1">Tajuk Program</label>
+    <input id="nadiProgramTitle" class="form-control form-control-sm" placeholder="cth: Saringan Komuniti Tmn Mawar">
+  </div>
+  <div>
+    <label class="form-label mb-1">Tarikh Program</label>
+    <input id="nadiProgramDate" type="date" class="form-control form-control-sm">
+  </div>
+  <div class="ms-auto d-flex gap-2">
+    <button id="btnNadiSaveActivity" class="btn btn-sm btn-primary">
+      <i class="bi bi-cloud-upload me-1"></i>Simpan Aktiviti (Semua)
+    </button>
+    <button id="btnNadiExportXlsx" class="btn btn-sm btn-outline-success">
+      <i class="bi bi-file-earmark-excel me-1"></i>Export Excel (Aktiviti)
+    </button>
+  </div>
+</div>
       <div class="card">
         <div class="card-body">
           <div class="nadi-scroll-container">
